--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.12.2",
-    "framer-motion": "^10.16.5",
+    "framer-motion": "^10.18.0",
     "highcharts": "^11.3.0",
     "highcharts-react-official": "^3.2.1",
     "react": "^18.2.0",
