--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.7",
+    "@react-three/drei": "^9.97.5",
+    "@react-three/fiber": "^8.15.16",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.12.2",
+    "@types/three": "^0.161.2",
     "framer-motion": "^10.18.0",
     "highcharts": "^11.3.0",
     "highcharts-react-official": "^3.2.1",
@@ -26,7 +29,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
