--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.10",
+    "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
